# ter-epub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: book.rs  cache.rs  container.rs  htmltotext.rs  main.rs  opf.rs  toc.rs  ui.rs
src/explorer/: index.rs
src/ui/: app.rs  event.rs  render.rs  show.rs
