[package]
name = "epub-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.31.0", features = ["serialize"]}
scraper = "0.18.1"
serde = {version = "1.0.193" , features = ["derive"]}
serde_json = "1.0.108"
zip = "0.6.6"
termion = "*"
dirs-next = "2.0.0"
textwrap = "0.16.0"
regex = "1.10.2"
ratatui = { version = "0.25.0", features = ["serde"] }
crossterm = "0.27.0"
html2text = "0.9.0"
