[package]
name = "ter-epub"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = {version = "0.31.0", features = ["serialize"]}
scraper = "0.18.1"
serde = {version = "1.0.193" , features = ["derive"]}
serde_json = "1.0.108"
zip = "0.6.6"
termion = "*"
dirs-next = "2.0.0"
textwrap = "0.16.0"
regex = "1.10.2"
ratatui = { version = "0.25.0", features = ["serde"] }
crossterm = "0.27.0"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
html2text = "0.10.2"
